# cf-rating-analysis

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
cpp/: CMakeLists.txt
cpp/src/: fft.cpp  naive  naive.cpp
docs/: benchmarks.md  dev-notes.md  development-doc.md  findings.md  rating-system.md
python/notebook/: naive_analysis.ipynb
python/scripts/: analyze_errors.py  benchmark_engines.py  clean_data.py  deflation_analysis.py  fetch_data.py  test.py  validate_engine.py  validate_engines.py
python/src/cleaner/: __init__.py  cleaner.py
python/src/fetch_cf_data/: __init__.py  fetch_cf_data.py
python/src/utils/: __init__.py
python/src/validation/: loader.py  metrics.py  runner.py
results/: benchmark.csv  error_metrics.csv  grouped_metrics.csv
tests/: conftest.py  test_engines.py  test_metrics.py
