# run "uv sync" & "uv pip install -e ." every time you update packages.

[project]
name = "cf-rating-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "requests>=2.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/fetch_cf_data",
            "python/src/utils",
            "python/src/cleaner",
            "python/src/validation"]

# For Pylance to work properly
[tool.pyright]
extraPaths = ["python/src"]