# run "uv sync --dev" after updating packages.

[project]
name = "cf-rating-analysis"
version = "0.1.0"
description = "Analysis and accelerated simulation of the Codeforces rating system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/fetch_cf_data",
            "python/src/utils",
            "python/src/cleaner",
            "python/src/validation"]

[tool.pyright]
extraPaths = ["python/src"]
